update index.html to use spfmt

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>SPARQL utitity</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/select2.min.css" rel="stylesheet">
-
-  </head>
-  <body>
-      <h1>SPARQL utility</h1>
+    <head>
+        <title>SPARQL utitity</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <script src="https://github.com/hchiba1/sparql-utils/tree/master/spfmt/spfmt_bundled.js"></script>  
+    </head>
+    <body>
+        <h1>spfmt</h1>
+        <textarea id="sparql-text" rows=5>
+        SELECT * WHERE{?s ?p  ?o}
+        </textarea>
+        <br>
+        <button id="reformat-button">reformat</button>
+        <br>
+        <textarea id="sparql-text-after" rows=5>
+        </textarea>
+    </body>
+    <script type="text/javascript">
+     window.onload = () => {
+         var textArea = 
+             document.querySelector("#reformat-button").addEventListener('click', (event) => {
+                 document.querySelector("#sparql-text-after").value =
+                     spfmt.reformat(document.querySelector("#sparql-text").value);
+             });
+     };
+    </script>
   </body>
 </html>
