--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>SPARQL utitity</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+        <script src="https://cdn.jsdelivr.net/gh/hchiba1/sparql-utils@master/spfmt/src/spfmt_bundled.js"></script>  
         <script src="https://github.com/hchiba1/sparql-utils/tree/master/spfmt/spfmt_bundled.js"></script>  
     </head>
     <body>
