--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <script src="https://cdn.jsdelivr.net/gh/hchiba1/sparql-utils@master/spfmt/src/spfmt_bundled.js"></script>  
     </head>
     <body>
-        <h1>spfmt</h1>
+        <h1>SPARQL utility</h1>
+        <h2>Reformatting SPARQL<h2>
         <textarea id="sparql-text" rows=5>
         SELECT * WHERE{?s ?p  ?o}
         </textarea>
         <br>
-        <button id="reformat-button">reformat</button>
+        <button id="reformat-button">Format</button>
         <br>
         <textarea id="sparql-text-after" rows=5>
         </textarea>
