--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     </head>
     <body>
         <h1>SPARQL utility</h1>
-        <h2>Reformatting SPARQL<h2>
         <textarea id="sparql-text" rows=5>
         SELECT * WHERE{?s ?p  ?o}
         </textarea>
         <br>
-        <button id="reformat-button">Format</button>
+        <button id="reformat-button">Reformat</button>
         <br>
         <textarea id="sparql-text-after" rows=5>
         </textarea>
