--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>SPARQL utitity</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <script src="https://cdn.jsdelivr.net/gh/hchiba1/sparql-utils@master/spfmt/src/spfmt_bundled.js"></script>  
+        <script src="https://cdn.jsdelivr.net/gh/hchiba1/spang@master/lib/spfmt_bundled.js"></script>  
     </head>
     <body>
         <h1>SPARQL utility</h1>
