Refer htmls by relative path

--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
         let link = document.createElement('a');
         link.className = "link_title";
         link.innerText = file.name;
-        link.href = `/library.html?name=${file.name}`;
+        link.href = `./library.html?name=${file.name}`;
         let area = document.querySelector('#contents-area');
         area.appendChild(link);
         area.appendChild(document.createElement("br"));
