--- a/web/library.html
+++ b/web/library.html
@@ -22,7 +22,7 @@
       SPANG
     </a>
     &gt;&gt;
-    <a href="/index.html">
+    <a href="./index.html">
       Library
     </a>
     &gt;&gt;
@@ -53,7 +53,7 @@
         let link = document.createElement('a');
         link.className = "link_title";
         link.innerText = file.name;
-        link.href = `/query.html?library=${libraryName}&query=${file.name}`;
+        link.href = `./query.html?library=${libraryName}&query=${file.name}`;
         let area = document.querySelector('#contents-area');
         area.appendChild(link);
         area.appendChild(document.createElement("br"));
