Fix usage of common-header-and-footer.js

--- a/web/query.html
+++ b/web/query.html
@@ -9,7 +9,6 @@
   </title>
   <link rel="shortcut icon" type="image/x-icon"
         href="./favicon.ico">
-  <link rel="stylesheet" href="./SPANG_files/common-header-and-footer.css">
   <script src="https://unpkg.com/json5@^2.0.0/dist/index.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js"></script>
@@ -18,13 +17,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/addon/edit/matchbrackets.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/addon/edit/closebrackets.min.js"></script>
   <script src='https://cdn.jsdelivr.net/gh/sparqling/spang@864c3ac/js/spang.min.js'></script>
-  
+  <script id="common-header-and-footer__script" src="https://dbcls.rois.ac.jp/DBCLS-common-header-footer/v2/script/common-header-and-footer.js" type="text/javascript"></script>
+
+
   <script src="./js/sparql-support.js"></script>
   <script src="./js/common.js"></script>
 </head>
 <body style="padding-top: 24px;">
-<script id="common-header-and-footer__script" src="./SPANG_files/common-header-and-footer.js" style="display: block"
-        type="text/javascript"></script>
 <div class="content_wrapper_wide">
   <div class="small">
     <a href="https://spang.dbcls.jp/">
