--- a/web/index.html
+++ b/web/index.html
@@ -9,14 +9,12 @@
   </title>
   <link rel="shortcut icon" type="image/x-icon"
         href="./favicon.ico">
-  <link rel="stylesheet" href="./SPANG_files/common-header-and-footer.css">
   <script src="https://unpkg.com/json5@^2.0.0/dist/index.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="./js/common.js"></script>
+  <script id="common-header-and-footer__script" src="https://dbcls.rois.ac.jp/DBCLS-common-header-footer/v2/script/common-header-and-footer.js" type="text/javascript"></script>
 </head>
 <body style="padding-top: 24px;">
-<script id="common-header-and-footer__script" src="./SPANG_files/common-header-and-footer.js" style="display: block"
-        type="text/javascript"></script>
 <div class="content_wrapper_wide">
   <div class="small">
     <a href="https://spang.dbcls.jp/">
