--- a/web/query.html
+++ b/web/query.html
@@ -24,6 +24,8 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.widgets.min.js"></script>
   <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/extras/jquery.tablesorter.pager.min.js"></script>
+  <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/widgets/widget-output.min.js"></script>
   <script id="common-header-and-footer__script" src="https://dbcls.rois.ac.jp/DBCLS-common-header-footer/v2/script/common-header-and-footer.js" type="text/javascript"></script>
 
 
@@ -73,6 +75,9 @@
   let queryName = params.get("query");
   let sorter;
   let editor;
+  $(document).on('click', '.download-btn', (e) => {
+    $("#inner_result_table").trigger('outputTable');
+  });
   
   $(document).ready(function(event) {
     let textArea = document.getElementById("code");
@@ -97,6 +102,10 @@
       }
     });
     editor.setValue("");
+    
+    function removeExtension(filename) {
+      return filename.split('.').slice(0, -1).join('.');
+    }
 
     function swap(object){
       var ret = {};
@@ -115,22 +124,27 @@
         let prefixes = swap(spang.prefix.extractPrefixes(query));
         
         let queryArea = $("#query_result_div");
-        let resultHTML = '<label style="margin-left: 10px;">Filter by:</label> <input id="result-filter" data-column="all" type="search" style="margin-right: 30px;">' + 
+        let resultHTML = '<button style="margin-right: 30px; margin-left: auto;" class="download-btn btn">Download TSV</button><br>' +
+            '<label style="margin-left: 10px;">Filter by:</label> <input id="result-filter" data-column="all" type="search" style="margin-right: 30px;">' + 
           '<div id="pager" style="float: right;">' +
           '<button class="d-inline first btn"><<</button>' +
           '<button class="d-inline prev btn"><</button> ' +
           '<span style="display:inline-block; width: 200px; text-align: center" class="pagedisplay" data-pager-output-filtered="{startRow} &ndash; {endRow} / {filteredRows} of {totalRows} rows"></span>' +
           '<button class="d-inline next btn">></button>' +
-          '<button class="d-inline last btn"> >> </button></div>'; 
+          '<button class="d-inline last btn"> >> </button></div>'
+          ; 
         resultHTML += "<table id='inner_result_table' class='table'><thead>";
         let vars = res.head.vars;
+        resultHTML += `<th>No.</th>`;
         for(let v of vars) {
           resultHTML += `<th>${v}</th>`;
         } 
         resultHTML += "</thead>";
         resultHTML += "<tbody>";
+        let row = 0;
         for(let b of res.results.bindings) {
-          resultHTML += "<tr>";
+          ++row;
+          resultHTML += `<tr><td>${row}</td>`;
           for(let v of vars) {
             resultHTML += "<td>";
             if(b[v]) {
@@ -157,13 +171,20 @@
         queryArea[0].innerHTML = resultHTML;
         queryArea.show();
 
+        let now = new Date();
         sorter = $('#inner_result_table').tablesorter(
           {    
             widgetOptions : {
               filter_columnFilters: false,
               filter_external: '#result-filter',
+              output_separator     : "\t",         // ',' 'json', 'array' or separator (e.g. ';')
+              output_ignoreColumns : [0],         // columns to ignore [0, 1,... ] (zero-based index)
+              output_hiddenColumns : false,       // include hidden columns in the output
+              output_saveRows      : 'a',         // (a)ll, (v)isible, (f)iltered, jQuery filter selector (string only) or filter function
+              output_delivery      : 'd',         // (p)opup, (d)ownload
+              output_saveFileName  : `${removeExtension(queryName)}_${now.getFullYear()}_${now.getMonth() + 1}_${now.getDate()}.tsv`
             },
-            widgets: ["filter"],
+            widgets: ["filter", "output"],
           }
         );
         sorter.tablesorterPager({container: '#pager', size: 10});
